Update astro example

--- a/examples/astro/package.json
+++ b/examples/astro/package.json
@@ -11,7 +11,8 @@
         "astro": "astro"
     },
     "dependencies": {
-        "astro": "^1.7.1",
-        "@master/css": ""
+        "@master/css": "",
+        "@master/css.vite": "*",
+        "astro": "^1.7.1"
     }
 }
