--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,12 @@ on:
 jobs:
     test:
         timeout-minutes: 15
-        runs-on: ubuntu-20.04
+        runs-on: ${{ matrix.os }}
         strategy:
             matrix:
                 node-version: [18.12.1]
+                os: [ubuntu-latest, windows-latest]
+
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
