Fix(CSS): Buffer is not defined in non-Node environment

--- a/examples/vue/package.json
+++ b/examples/vue/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "master-css-aot-in-vue",
+    "name": "master-css-in-vue",
     "private": true,
     "version": "0.0.0",
     "type": "module",
