--- a/packages/language-service/server/package.json
+++ b/packages/language-service/server/package.json
@@ -14,6 +14,7 @@
         "vscode-languageserver": "^7.0.0",
         "vscode-languageserver-textdocument": "^1.0.4",
         "@master/css": "",
+        "@master/css.compiler": "",
         "@types/js-beautify": "^1.13.3",
         "file-uri-to-path": "^2.0.0",
         "js-beautify": "^1.14.3",
