Add(Compiler): `options.sources` for specific sources, not excluded by `options.exclude`

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -52,6 +52,6 @@
         "cross-import": "^1.4.4",
         "fast-glob": "^3.2.12",
         "minimatch": "^5.1.1",
-        "normalize-path": "^3.0.0"
+        "upath": "^2.0.1"
     }
 }
