--- a/.github/ISSUE_TEMPLATE/docs_request.yml
+++ b/.github/ISSUE_TEMPLATE/docs_request.yml
@@ -10,15 +10,10 @@ body:
       description: 'Example: I would like to see more examples of how to use the xxx. Or, the xxx docs are missing information.'
     validations:
       required: true
-  - type: textarea
-    attributes:
-      label: Is there any context that might help us understand?
-      description: A clear description of any added context that might help us understand.
-    validations:
-      required: true
   - type: input
     attributes:
-      label: Does the docs page already exist? Please link to it.
+      label: Docs page
+      description: Does the docs page already exist? Please link to it.
       placeholder: https://
     validations:
       required: false
