--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -4,41 +4,38 @@ title: '🐞 '
 labels: [bug]
 
 body:
-  - type: markdown
-    attributes:
-      value: Thanks for taking the time to make a bug report!
-
   - type: textarea
-    id: description
+    id: what-happened
     attributes:
-      label: Description
-      description: Please provide a detailed description to tell us what the bug is. Also tell us what is the expected behavior you think.
-      placeholder: When I am going to ... by using ..., the "..." error happens. ...
+      label: What happened?
+      description: Also tell us, what did you expect to happen?
+      placeholder: Tell us what you see!
     validations:
       required: true
 
-  - type: textarea
-    id: reproduction
+  - type: input
+    id: version
     attributes:
-      label: Reproduction
-      description: Please provide a step-by-step [minimal reproduction](https://stackoverflow.com/help/minimal-reproducible-example) of the bug. It helps us to efficiently track down the bug.
-      placeholder: |
-        1. ... 
-        2. ... 
-        3. ...
+      label: Version
+      description: What version of our software are you running?
+      placeholder: ex. v2.0.0
     validations:
       required: false
-
+        
   - type: textarea
-    id: system
+    id: logs
     attributes:
-      label: System Informations
-      description: Please provide the system informations related to the bug. Browser, OS, Node.js, Package Manager ...
-      placeholder: |
-        Browser Version / OS Version / Node.js Version / Package Manager Version
-    validations:
-      required: false
+      label: Relevant log output
+      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      render: shell
 
-  - type: markdown
+  - type: dropdown
+    id: browsers
     attributes:
-      value: Thank you for the bug report! We will try to investigate the bug as soon as possible.
+      label: What browsers are you seeing the problem on?
+      multiple: true
+      options:
+        - Firefox
+        - Chrome
+        - Safari
+        - Microsoft Edge
