--- a/.github/workflows/commit-check.yml
+++ b/.github/workflows/commit-check.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
     check:
+        name: 'commit-check'
         timeout-minutes: 15
         runs-on: ubuntu-20.04
         strategy:
