Update(compiler): `@master/css.compiler` to `@master/css-compiler`

--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -51,6 +51,6 @@
     },
     "dependencies": {
         "@master/css": "",
-        "@master/css.compiler": ""
+        "@master/css-compiler": ""
     }
 }
