--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@master/css.compiler",
+    "name": "@master/css-compiler",
     "scripts": {
         "build": "aron pack --platform=node",
         "dev": "npm run build -- --watch",
