--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
         "examples/*"
     ],
     "devDependencies": {
-        "aron-web-jest": "^1.0.0-beta.50",
-        "aronrepo": "^1.0.0-beta.50",
+        "aron-web-jest": "^1.0.0",
+        "aronrepo": "^1.0.0",
         "dedent": "^0.7.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12"
