--- a/packages/normal.css/package.json
+++ b/packages/normal.css/package.json
@@ -34,5 +34,8 @@
     "style": "./dist/index.css",
     "files": [
         "dist"
-    ]
+    ],
+    "publishConfig": {
+        "access": "public"
+    },
 }
