--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -46,6 +46,9 @@
     "files": [
         "dist"
     ],
+    "publishConfig": {
+        "access": "public"
+    },
     "dependencies": {
         "@master/css": "",
         "fast-glob": "^3.2.12",
