--- a/packages/keyframes.css/package.json
+++ b/packages/keyframes.css/package.json
@@ -37,5 +37,8 @@
     "style": "./dist/index.css",
     "files": [
         "dist"
-    ]
+    ],
+    "publishConfig": {
+        "access": "public"
+    },
 }
