--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -174,6 +174,9 @@
     "scripts": {
         "deploy": "mv ../../package.json ../../_package.json && npm i vsce -D && vsce publish && mv ../../_package.json ../../package.json"
     },
+    "publishConfig": {
+        "access": "public"
+    },
     "devDependencies": {
         "vsce": "^2.15.0"
     }
