--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -46,6 +46,9 @@
     "files": [
         "dist"
     ],
+    "publishConfig": {
+        "access": "public"
+    },
     "peerDependencies": {
         "vite": ">=3.0.0"
     },
