--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -46,6 +46,9 @@
     "files": [
         "dist"
     ],
+    "publishConfig": {
+        "access": "public"
+    },
     "dependencies": {
         "@master/css": "",
         "@master/css-compiler": "",
