Improve(Compiler): Check the validity of CSS rules with stylelint

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -53,6 +53,7 @@
         "@master/css": "",
         "fast-glob": "^3.2.12",
         "minimatch": "^5.1.1",
+        "stylelint": "^14.16.0",
         "techor": "^1.0.5",
         "upath": "^2.0.1"
     }
