Fix(Vite): Changing master.css.js won't update style by HMR

--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -54,6 +54,7 @@
     },
     "dependencies": {
         "@master/css": "",
-        "@master/css-compiler": ""
+        "@master/css-compiler": "",
+        "upath": "^2.0.1"
     }
 }
