--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -5,7 +5,8 @@
         "dev": "npm run build -- --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
-        "lint": "eslint src"
+        "lint": "eslint src",
+        "postinstall": "node scripts/postinstall.js"
     },
     "license": "MIT",
     "description": "A Virtual CSS language with enhanced syntax ~13KB",
@@ -57,7 +58,8 @@
         }
     },
     "files": [
-        "dist"
+        "dist",
+        "scripts"
     ],
     "publishConfig": {
         "access": "public"
