--- a/examples/next.js/package.json
+++ b/examples/next.js/package.json
@@ -12,7 +12,7 @@
         "@types/node": "18.11.17",
         "@types/react": "18.0.26",
         "@types/react-dom": "18.0.10",
-        "next": "13.1.1",
+        "next": "^13.1.1-canary.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "typescript": "4.9.4"
