--- a/packages/language-service/server/package.json
+++ b/packages/language-service/server/package.json
@@ -12,20 +12,17 @@
     "engines": {
         "node": "*"
     },
-    "dependencies": {
+    "devDependencies": {
+        "@types/js-beautify": "^1.13.3",
+        "@types/minimatch": "^5.1.2",
         "vscode-languageserver": "^7.0.0",
         "vscode-languageserver-textdocument": "^1.0.4",
         "@master/css": "",
         "@master/css-compiler": "",
-        "@types/js-beautify": "^1.13.3",
         "file-uri-to-path": "^2.0.0",
         "js-beautify": "^1.14.3",
         "minimatch": "^5.1.0",
         "pascal-case": "^3.1.2"
-    },
-    "devDependencies": {
-        "@types/js-beautify": "^1.13.3",
-        "@types/minimatch": "^5.1.2"
     },
     "main": "./dist/server.js",
     "jsnext:main": "./dist/server.mjs",
