--- a/examples/lit/package.json
+++ b/examples/lit/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview",
-        "test": "jest"
+        "preview": "vite preview"
     },
     "dependencies": {
         "@master/css": "",
