Fix(CLI): Use `compiler.sources` as watching path

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,6 +36,7 @@
     "dependencies": {
         "chokidar": "^3.5.3",
         "commander": "^10.0.0",
+        "fast-glob": "^3.2.12",
         "fs-extra": "^11.1.0"
     }
 }
