Fix jest exception

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12",
         "jest-puppeteer": "^6.2.0",
-        "upath": "^2.0.1"
+        "upath": "^2.0.1",
+        "jest": "^29.4.1"
     },
     "engines": {
         "node": "^18"
