--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
         "examples/*"
     ],
     "devDependencies": {
-        "aron-web-jest": "^1.0.0",
-        "aronrepo": "^1.0.5",
+        "aron-web-jest": "^1.0.6",
+        "aronrepo": "^1.0.6",
         "dedent": "^0.7.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12",
         "jest-puppeteer": "^6.2.0",
-        "upath": "^2.0.1",
-        "jest": "^29.4.1"
+        "upath": "^2.0.1"
     },
     "engines": {
         "node": "^18"
