--- a/examples/parcel/package.json
+++ b/examples/parcel/package.json
@@ -2,9 +2,7 @@
     "name": "master-css-in-parcel",
     "version": "1.0.0",
     "description": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
+    "private": true,
     "keywords": [],
     "author": "",
     "license": "ISC",
