Improve(CSS): Migrate `@master/css-cli` to `@master/css`

--- a/examples/webpack/tsconfig.json
+++ b/examples/webpack/tsconfig.json
@@ -14,8 +14,7 @@
         ]
     },
     "include": [
-        "src/**/*.ts",
-        "src/**/*.d.ts"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules"
