--- a/packages/language-service/client/package.json
+++ b/packages/language-service/client/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css-language-client",
     "scripts": {
-        "build": "aron pack --platform=node",
+        "build": "aron pack",
         "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
