--- a/packages/vite/tsconfig.json
+++ b/packages/vite/tsconfig.json
@@ -5,8 +5,7 @@
         "outDir": "dist",
     },
     "include": [
-        "src/**/*.ts",
-        "src/**/*.d.ts"
+        "src/**/*"
     ],
     "exclude": [
         "src/**/*.test.ts"
