--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -2,12 +2,12 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": ".",
-        "outDir": "dist",
+        "composite": true
     },
     "include": [
         "src/**/*"
     ],
     "exclude": [
-        "src/**/*.test.ts"
+        "src/**/*.test.*"
     ]
 }
