--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": ".",
+        "rootDir": "src",
         "composite": true
     },
     "include": [
