--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -1,9 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "baseUrl": ".",
-        "rootDir": "src",
-        "composite": true
+        "baseUrl": "."
     },
     "include": [
         "src/**/*"
