--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -13,7 +13,7 @@
         "@master/css.vite": "",
         "puppeteer": "^19.4.1",
         "typescript": "^4.9.3",
-        "vite": "^4.0.1",
-        "upath": "^2.0.1"
+        "upath": "^2.0.1",
+        "vite": "^4.0.1"
     }
 }
