Fix(CSS): `TypeError: Vs is not a function`

--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -73,10 +73,10 @@
         "chokidar": "^3.5.3",
         "commander": "^10.0.0",
         "fast-glob": "^3.2.12",
-        "fs-extra": "^11.1.0",
-        "ts-dedent": "^2.2.0"
+        "fs-extra": "^11.1.0"
     },
     "devDependencies": {
-        "to-extend": "^1.4.6"
+        "to-extend": "^1.4.6",
+        "ts-dedent": "^2.2.0"
     }
 }
