--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": ".",
-        "jsx": "react"
+        "jsx": "react-jsx"
     },
     "include": [
         "src/**/*"
