Example(React): Use the latest Master CSS React API and add a theme switching example

--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
+        "build": "tsc && vite build",
         "preview": "vite preview"
     },
     "dependencies": {
@@ -13,10 +13,12 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@master/css.react": "",
         "@master/css.vite": "",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
         "@vitejs/plugin-react": "^3.1.0",
+        "typescript": "^4.9.3",
         "vite": "^4.1.0"
     }
 }
