--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@master/css": "",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
