--- a/examples/next.js@12/package.json
+++ b/examples/next.js@12/package.json
@@ -11,7 +11,9 @@
     "dependencies": {
         "next": "12.3.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "@master/css": "",
+        "@master/css.react": ""
     },
     "devDependencies": {
         "@types/node": "18.11.0",
