--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "baseUrl": "."
+        "baseUrl": ".",
+        "rootDir": "src"
     },
     "include": [
         "src/**/*"
