--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "npm run build && vite preview"
     },
     "dependencies": {
         "@master/css": "",
