--- a/examples/next.js-with-progressive-rendering/package.json
+++ b/examples/next.js-with-progressive-rendering/package.json
@@ -10,13 +10,13 @@
         "preview": "npm run build && npm run start"
     },
     "dependencies": {
+        "@master/css.react": "",
         "@types/node": "18.14.6",
         "@types/react": "18.0.28",
         "@types/react-dom": "18.0.11",
         "next": "13.2.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "typescript": "4.9.5",
-        "@master/css.react": ""
+        "typescript": "4.9.5"
     }
 }
