--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -42,7 +42,10 @@
         "mastercss"
     ],
     "sideEffects": [
-        "./src/polyfills/css-escape.ts"
+        "./dist/polyfills/*",
+        "./src/polyfills/*",
+        "./polyfills/css-escape",
+        "./polyfills/*"
     ],
     "main": "./dist/index.cjs",
     "jsnext:main": "./dist/index.mjs",
