--- a/packages/language-service/server/package.json
+++ b/packages/language-service/server/package.json
@@ -24,15 +24,15 @@
         "minimatch": "^5.1.0",
         "pascal-case": "^3.1.2"
     },
-    "main": "./dist/server.js",
-    "jsnext:main": "./dist/server.mjs",
-    "esnext": "./dist/server.mjs",
-    "module": "./dist/server.mjs",
+    "main": "./dist/cjs/server.js",
+    "jsnext:main": "./dist/esm/server.js",
+    "esnext": "./dist/esm/server.js",
+    "module": "./dist/esm/server.js",
     "types": "./dist/server.d.ts",
     "exports": {
         ".": {
-            "require": "./dist/server.js",
-            "import": "./dist/server.mjs",
+            "require": "./dist/cjs/server.js",
+            "import": "./dist/esm/server.js",
             "types": "./dist/server.d.ts"
         }
     },
