--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,16 +27,15 @@
         "mastercss"
     ],
     "sideEffects": false,
-    "main": "./dist/index.cjs",
-    "jsnext:main": "./dist/index.mjs",
-    "browser": "./dist/index.js",
-    "esnext": "./dist/index.mjs",
-    "module": "./dist/index.mjs",
+    "main": "./dist/cjs/index.js",
+    "jsnext:main": "./dist/esm/index.js",
+    "esnext": "./dist/esm/index.js",
+    "module": "./dist/esm/index.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "require": "./dist/index.cjs",
-            "import": "./dist/index.mjs",
+            "require": "./dist/cjs/index.js",
+            "import": "./dist/esm/index.js",
             "types": "./dist/index.d.ts"
         }
     },
