--- a/packages/language-service/client/package.json
+++ b/packages/language-service/client/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css-language-client",
     "scripts": {
-        "build": "aron pack --platform node",
+        "build": "aron pack --platform node --shakeable-format",
         "dev": "npm run build -- --watch",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
@@ -21,15 +21,15 @@
     "peerDependencies": {
         "vscode": ""
     },
-    "main": "./dist/cjs/extension.js",
-    "jsnext:main": "./dist/esm/extension.js",
-    "esnext": "./dist/esm/extension.js",
-    "module": "./dist/esm/extension.js",
+    "main": "./dist/extension.js",
+    "jsnext:main": "./dist/extension.mjs",
+    "esnext": "./dist/extension.mjs",
+    "module": "./dist/extension.mjs",
     "types": "./dist/extension.d.ts",
     "exports": {
         ".": {
-            "require": "./dist/cjs/extension.js",
-            "import": "./dist/esm/extension.js",
+            "require": "./dist/extension.js",
+            "import": "./dist/extension.mjs",
             "types": "./dist/extension.d.ts"
         }
     },
